# basic36

./: .gitignore  BUILD  MODULE.bazel  README.md  TODO.md  file_stream.cc  file_stream.h  file_stream_tests.cc  glexer.cc  lexer.cc  lexer.h  lexer_tests.cc  stream_interface.h  test_utility.cc  test_utility.h  token.cc  token.h  token_tests.cc
docs/: README.md
scripts/: check  format
test_data/: numbers.txt
